🐛 Fix theme toggler on small screens
Fixes issue where theme toggler was off the screen.

--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -1,12 +1,13 @@
 @use "../../../styles/variables/colors";
 
 .nav {
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
 
   background: colors.$primary;
   width: auto;
-  padding: 0 5vw;
+  padding: 0.5rem 2vw;
 
   font-size: 1rem;
   color: white;
